# autogen-exploration

./: .env-example  README.md  pyproject.toml  requirements.txt
src/advanced/01-custom-agent/: example_01_countdown_agent.py  example_02_arithmetic_agent.py  example_03_azure_openai_asst.py
src/advanced/02-selector-group-chat/: example_01_web_search_analysis.py  example_02_custom_candidate_function.py  example_03_user_feedback.py  example_04_reasoning_model_selector.py
src/advanced/03-swarm/: example_01_customer_support.py  example_02_stock_research.py
src/advanced/04-magentic-one/: example_01_quick_start.py  example_02_multi_modal.py  example_03_magentic_one_helper.py
src/advanced/05-graphflow/: example_01_sequential_flow.py  example_02_parallel_flow_with_join.py  example_03_message_filtering.py  example_04_conditional_loop.py  example_05_loop_with_multiple_paths.py  example_06_mixed_activation_groups.py
src/advanced/06-memory-and-rag/: example_01_list_memory.py  example_02_chromadb_memory.py
src/introduction/01-asst-agent/: example_01_asst_agent.py  example_02_multimodal_msg.py  example_03_streaming_msg.py  example_04_functional_tool.py  example_05_mcp_workbench.py  example_06_no_parallel_tool_call.py  example_07_structured_output.py  example_08_streaming_tokens.py
src/introduction/02-teams/: example_01_roundrobin_team.py  example_02_stopping_team.py  example_03_aborting_team.py  example_04_single_agent_team.py
src/langchain/: example_01_pandas_tool.py  example_02_sqldb_tool.py
src/quick-start/: lesson-one.py  lesson-two.py  lesson_one.py  lesson_two.py
(+3 files in other folders)
